--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
-    "start":"node ./dist/index.js",
-    "build":"npx tsc"
+    "start": "node ./dist/index.js",
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0"
   },
