--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-fileupload": "^1.4.1",
+    "@types/multer": "^1.4.7",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.31.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "joi": "^17.6.0",
     "mongoose": "^6.5.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -27,6 +34,7 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/uuid": "^8.3.4",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.7.4"
   }
