--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express-fileupload": "^1.4.1",
-    "@types/multer": "^1.4.7",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -28,6 +26,8 @@
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -35,11 +35,12 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.4.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.4",
-    "tsc-watch": "^5.0.3",
-    "typescript": "^4.7.4"
+    "tsc-watch": "^5.0.3"
   }
 }
