--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "stripe": "^12.6.0",
     "typescript": "^5.0.2",
     "uuid": "^8.3.2"
   },
